# rust_websockets_optimized

./: .gitattributes  .gitignore  Cargo.toml  Readme.md  config.json.example  local.json  tmp.txt
client/: Cargo.toml  test_rust.py
client/src/: api.rs  lib.rs  main.rs  triangles.rs
client/src/api/: order.rs  secret_key.rs  subscription.rs  types.rs  utils.rs  ws.rs
client/src/bindings/: mod.rs
client/src/client/: binance.rs  config.rs  mod.rs
mock/actix-ws-server/: Cargo.toml
mock/actix-ws-server/src/: main.rs  subscription.rs
