[package]
name = "arbitrage-processing"
version = "0.1.0"
edition = "2021"

[lib]
name = "arbitrage_processing"
crate-type = ["cdylib", "lib"]

[dependencies]
actix-codec = {version = "0.5.1"}
actix-web = "4.1.0"
ahash = "0.8.3"
anyhow = "1.0.51"
awc = {version = "3.0.0", features = ["rustls"]}
bytes = "1.4.0"
bytestring = "1.3.0"
clap = "3.2.6"
env_logger = "0.9.0"
futures = "0.3.21"
futures-util = "0.3.28"
hex = "0.4.3"
hmac = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.17"
once_cell = "1.17.2"
pyo3 = { version = "0.18", features = ["extension-module"] }
pyo3-asyncio = { version = "0.18.0", features = ["tokio-runtime"] }
rand = "0.8.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
serde_qs = "0.9.2"
sha2 = "0.9.8"
tokio = { version = "1.28.2", features = ["macros", "time", "rt", "rt-multi-thread"] }
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "serde"] }
